# CIPs

./: .gitattributes  .gitignore  2022-03-15.md  Additional factors for facilitating NFT market verification  CIP 69? - Set minPoolCost to 0  CIP-0026.md  CIP-0027.md  CIP-101  CIP-????  CIP-NFTMetadataStandard.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CPS-XXXX.md  CPS0000.md  Decentralization - Using Pledge as a Bidding Parameter to Determine Saturation Limit.md  Draft  README.md  cip-caseygibson-dynamicsaturation.md  cip-gege251-reliably-ordered-tx-inputs.md  cip-ledger-state.md  cip-template.md  datahashlasmlabscity.md  myawesomeCIP.md  njnt.md  package-lock.json  package.json
.github/: CIP-TEMPLATE.md  CIP-VALIDATION.md  CPS-TEMPLATE.md  CPS-VALIDATION.md
BiweeklyMeetings/: 01-12-2021.md  01-26-2021.md  02-09-2021.md  03-16-2021.md  03-30-2021.md  04-13-2021.md  05-11-2021.md  05-25-2021.md  06-29-2021.md  07-01-2020.md  07-15-2020.md  07-20-2021.md  08-03-2021.md  08-04-2020.md  08-11-2020.md  08-17-2021.md  08-25-2020.md  09-08-2020.md  09-22-2020.md  10-06-2020.md  10-20-2020.md  11-03-2020.md  11-17-2020.md  12-09-2020.md  2020-07-15.md  2020-08-04.md  2020-08-11.md  2020-08-25.md  2020-09-22.md  2020-10-06.md  2020-10-20.md  2020-12-08.md  2021-01-12.md  2021-02-23.md  (+39 more)
CIP-data-compression/secure-zstd/: CMakeLists.txt  README.md
CIP-data-compression/secure-zstd/lib/: CMakeLists.txt
CIP-data-compression/secure-zstd/lib/seczstd/: caller.c  caller.h  common.c  common.h  worker.c  worker.h
CIP-data-compression/secure-zstd/test/: caller.c  fuzzer.c  worker.c
(+1023 files in other folders)
